fix bottom offset when description is too long

--- a/public/style/css/block.css
+++ b/public/style/css/block.css
@@ -1314,7 +1314,7 @@ body {
     visibility: visible;
     opacity: 1; }
   .highlighted .linesBlock.bottom .content {
-    top: -150%; }
+    top: -160%; }
     .highlighted .linesBlock.bottom .content p {
       height: 100%;
       width: 100%; }
