--- a/public/style/scss/lines.scss
+++ b/public/style/scss/lines.scss
@@ -150,9 +150,9 @@ $mobile-size:768px;
               height: 100%;
               width: 100%;
           }
-          top: -150%;
-        }
+          top: -160%  ;
 
+        }
         &#nightmare .content {
           top: -160%;
         }
